@@ -184,62 +184,4 @@ do { \
   text->buffer[ text->string_size ] = EOS; \
 } while (false)
 
-/* Error handlers. ==========================================================*/
-
-/* The syntax of an error handler is:
- * TRY STATEMENT1
- * IF_ERROR STATEMENT2
- * FINALLY STATEMENT3
- * END_TRY;
- *
- * The parts "IF_ERROR STATEMENT2" and "FINALLY STATEMENT3" are optional.
- *
- * First, STATEMENT1 is executed.
- * If the function "error" is called in STATEMENT1 or in a function 
- * called from there, STATEMENT2 and then STATEMENT3 will be executed
- * (if they exist).
- * If the function "error" is not called, STATEMENT3 will executed.
- * In STATEMENT2, you can use the statement "RESUME" to leave the error
- * state. */
-
-#define TRY \
-do { \
-  jmp_buf error_handler, *older_error_handler = current_error_handler; \
-  volatile bool rethrow; \
-  current_error_handler = &error_handler; \
-  if (!(rethrow = (setjmp( error_handler ) != 0)))
-
-#define IF_ERROR else
-#define FINALLY /* Nothing. */
-
-#define END_TRY \
-  current_error_handler = older_error_handler; \
-  if (rethrow) \
-    malaga_throw(); \
-} while (false)
-
-#define RESUME rethrow = false
-
-extern text_t *error_text; /* The text of the last error. FIXME */
-
-extern jmp_buf *current_error_handler; /* The active innermost error handler FIXME */
-
-extern NO_RETURN_PREFIX void malaga_throw( void ) NO_RETURN_SUFFIX;
-/* Call the current error handler. 
- * If there is no current error handler, print error and exit. */
-
-extern NO_RETURN_PREFIX void complain( string_t message, ... ) NO_RETURN_SUFFIX;
-/* Save the error MESSAGE in ERROR_TEXT.
- * Additional arguments to "complain" are inserted where 
- * "%s" (string_t ARGUMENT), "%c" (char_t ARGUMENT), "%u" (gunichar ARGUMENT),
- * or "%d" (int_t ARGUMENT) is part of MESSAGE. */
-
-/* Module initialisation. ===================================================*/
-
-extern void init_basic();
-/* Initialise this module. */
-
-extern void terminate_basic( void );
-/* Terminate this module. */
-
 }}}
