@@ -10,7 +10,6 @@
 #include <stdarg.h>
 #include <string.h>
 #include <stdlib.h>
-#include <setjmp.h>
 #include <time.h>
 #include "morphology/malaga/basic.hpp"
 #include "morphology/malaga/pools.hpp"
