@@ -15,7 +15,6 @@
 #include <stdlib.h>
 #include <stdio.h>
 #include <string.h>
-#include <setjmp.h>
 #include "morphology/malaga/basic.hpp"
 #include "morphology/malaga/files.hpp"
 #include "morphology/malaga/pools.hpp"
